/*
 * User: RikeshLalShrestha
 * Created at: 9/4/20, 5:10 PM
 */

/*
 * User: RikeshLalShrestha
 * Created at: 9/3/20, 3:27 PM
 */

package global.citytech.cms;

import global.citytech.cms.view.FrontDeskView;

public class CustomerManagementSystem {
    public static void main(String[] args) {
        FrontDeskView frontDeskInterface = new FrontDeskView();

        frontDeskInterface.start();
    }
}
