package global.citytech.cms.dao;

public class Customer {
    private String id;
    private String fullName;
    private String category;
    private boolean vipStatus;
    private boolean paid;
}
